<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.app.subastas.viewmodel.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/f4">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="44dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_login"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_marginTop="50dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_title_p2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/init_logo_description"
                    android:fontFamily="@font/museosans_700"
                    android:text="¡Ir a mis subastas!"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_login" />

                <TextView
                    android:id="@+id/txt_subtitle_p2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/description_init_subtitle"
                    android:fontFamily="@font/museosans_500"
                    android:text="Toda persona, natural o jurídica puede participar en las diferentes subastas de la Dirección General de Aduanas."
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_p2" />

                <Button
                    android:id="@+id/init_action_start"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/default_gap"
                    android:background="@drawable/button_style"
                    android:fontFamily="@font/museosans_700"
                    android:text="Ingresar"
                    android:textAllCaps="false"
                    android:textColor="@color/primary_color"
                    android:textSize="@dimen/button_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_subtitle_p2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/init_action_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:autoLink="web"
                    android:fontFamily="@font/museosans_700"
                    android:lineSpacingExtra="8sp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/p1_btn_empezar" />

                <TextView
                    android:id="@+id/init_action_forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:autoLink="web"
                    android:fontFamily="@font/museosans_700"
                    android:textSize="18sp"
                    android:lineSpacingExtra="8sp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/p1_btn_empezar" />

                <TextView
                    android:id="@+id/txt_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="80dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="*Se deben cumplir con los requisitos legales establecidos en la Disposición Administrativa de Carácter General DACG No. DGA 012-2016"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_link" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>